--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,5 @@
 body {
     background-image: url("/assets/images/login.jpg");
-    font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     background-size: cover;
     background-repeat: no-repeat;
@@ -18,6 +17,7 @@ main {
 }
 
 .login-container {
+    font-family: Arial, sans-serif;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -29,23 +29,65 @@ main {
     width: 400px;
 }
 header {
-    height: 50px;
-    color: #fff;
-    padding: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3s);
-    background-color: rgba(255, 255, 255, 0);
-    text-align: center;
-    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 10px;
+    background-color: rgba(0, 0, 0, 1);
+    width: 100%;
+    box-sizing: border-box;
+    margin: 0;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-}
+    z-index: 1000; /* Ensure the header stays on top of other content */
+  }
+  
+  .logo {
+    display: flex;
+    align-items: center;
+  }
+  
+  .logo img {
+    height: 50px;
+    margin-right: 15px;
+  }
+  
+  .title h1 {
+    margin: 0;
+    color: #fff;
+    font-size: 30px;
+  }
+  
+  nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+  }
+  
+  nav ul li {
+    display: inline;
+    margin-right: 20px;
+  }
+  
+  nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+  }
+  
+  nav ul li a:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+  }
 header h1 {
     display: block;
     color: white;
     font-size: 50px;
     height: 30px;
-    font-style: italic;
 }
 header p {
     color: white;
@@ -63,29 +105,6 @@ footer {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.3s);
     background-color: rgba(255, 255, 255, 0);
 }
-
-nav {
-    display: flex;
-    justify-content: center;
-}
-
-/* CSS for List */
-nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-}
-
-nav ul li {
-    margin: 0 20px;
-}
-
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-}
-
 .login-container h2 {
     margin-bottom: 20px;
     text-align: center;
